# temporary-ospath

./: .cirrus.yml  CHANGELOG.md  README.md  temporary-ospath.cabal
.github/workflows/: fourmolu.yml  haskell-ci.yml  wasm.yml  win-and-mac.yml
System/IO/Temp/: OsPath.hs
tests/: test.hs
