cabal-version:   2.2
name:            temporary-ospath
version:         1.3
license:         BSD-3-Clause
license-file:    LICENSE
maintainer:      Bodigrim <andrew.lelechenko@gmail.com>
tested-with:
    ghc ==9.14.1 ghc ==9.12.2 ghc ==9.10.3 ghc ==9.8.4 ghc ==9.6.7
    ghc ==9.4.8 ghc ==9.2.8 ghc ==9.0.2 ghc ==8.10.7 ghc ==8.8.4

synopsis:        Portable temporary file and directory support
description:
    Functions for creating temporary files and directories based on @OsPath@.
    Fork of @temporary@.

category:        System, Utils
build-type:      Simple
extra-doc-files:
    CHANGELOG.md
    README.md

source-repository head
    type:     git
    location: https://github.com/Bodigrim/temporary-ospath

library
    exposed-modules:  System.IO.Temp.OsPath
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base >=4.13 && <5,
        bytestring >=0.11.2 && <0.13,
        directory >=1.3.8 && <1.4,
        exceptions >=0.10 && <0.11,
        file-io >=0.1.3 && <0.3,
        filepath >=1.5 && <1.6,
        os-string >=2.0 && <2.1

    if !os(windows)
        build-depends: unix >=2.8 && <2.9

test-suite tests
    type:             exitcode-stdio-1.0
    main-is:          test.hs
    hs-source-dirs:   tests
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base <5,
        directory,
        file-io,
        filepath,
        os-string,
        tasty >=1.5 && <2,
        tasty-hunit >=0.10 && <1,
        temporary-ospath

    if !arch(wasm32)
        ghc-options: -threaded -with-rtsopts=-N2

    if !os(windows)
        build-depends: unix
